2004-12-28(jol):
	- add callback support with two parameters,
	- update callbacktest example.
2004-12-21(jol):
	- rename function to a more common stardard, nothing else (for now :).
	- fix test/Makefile.am to compile inputest and guitest, note that i were 
	  obliged to link these two examples with the libswigruntime library, 
	- fix g++ 3.4.3 compilation error,
	- fix inside py_base endian.h to our local endians.h,
	- fix configure.in, in fact on linux -framework Python is not supported.

Currently, our change log is our CVS ;>