@@ -1,5 +1,5 @@
 /*
-   $Id: surface_sdl.h,v 1.4 2003/11/22 09:37:13 ksterker Exp $
+   $Id: surface_sdl.h,v 1.5 2006/07/07 17:34:46 Mithander Exp $
 
    Copyright (C) 2003   Alexandre Courbot <alexandrecourbot@linuxgames.com>
    Part of the Adonthell Project http://adonthell.linuxgames.com
@@ -34,7 +34,7 @@ namespace gfx
         surface_sdl ();
 
         virtual ~surface_sdl (); 
-    
+
         virtual void set_mask (bool m); 
 
         virtual void set_alpha (u_int8 a); 
@@ -45,7 +45,7 @@ namespace gfx
 
         virtual void fillrect (s_int16 x, s_int16 y, u_int16 l, u_int16 h,
                                u_int32 col, drawing_area * da_opt = NULL);
-    
+
         virtual void draw_line (const s_int16 sx, const s_int16 sy, const s_int16 ex, const s_int16 ey, 
                                 const u_int32 col, const drawing_area * da_opt = NULL); 
 
@@ -55,24 +55,26 @@ namespace gfx
         virtual void unlock () const;
         virtual void put_pix (u_int16 x, u_int16 y, u_int32 col); 
         virtual u_int32 get_pix (u_int16 x, u_int16 y) const; 
-    
+
         virtual surface& operator = (const surface& src); 
 
         virtual void resize (u_int16 l, u_int16 h);
 
         virtual void clear (); 
-        
-    protected:         
+
+    protected:
         void set_data (void * data, u_int16 l, u_int16 h,
                        u_int8 bytes_per_pixel = RAW_BYTES_PER_PIXEL,
                        u_int32 red_mask = RAW_RED_MASK, u_int32 green_mask = RAW_GREEN_MASK,
-                       u_int32 blue_mask = RAW_BLUE_MASK);
-        
+                       u_int32 blue_mask = RAW_BLUE_MASK, u_int32 alpha_mask = 0);
+
         void * get_data (u_int8 bytes_per_pixel,
                          u_int32 red_mask, u_int32 green_mask,
                          u_int32 blue_mask) const;
-        
+
         SDL_Surface *vis;
+
+        void *vis_data; /* Data stored within 'vis', or NULL */
 
     private: 
 
@@ -87,7 +89,7 @@ namespace gfx
         {
             setup_rects (x, y, 0, 0, length (), height (), draw_to); 
         }
-    
+
         /// Used internally for blitting operations with drawing_areas.
         void setup_rects (s_int16 x, s_int16 y, s_int16 sx, s_int16 sy,
                           u_int16 sl, u_int16 sh, const drawing_area * draw_to) const; 
